# Jury

./: LICENSE  README.md  pyproject.toml
jury/: __init__.py  jury.py  launcher.py  timer.py
jury/utils/: assertion.py  hidden_prints.py  logger.py  network.py
