[project]
name = "jury-test"
version = "0.0.3"
authors = [
    { name = "suxb201", email = "suxb201@gmail.com" },
]
description = "A black box testing tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=12.4.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/suxb201/Jury"
"Bug Tracker" = "https://github.com/suxb201/Jury/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
